1999-02-16  Ulrich Drepper  <drepper@cygnus.com>

	* libgnomeui/gnome-about.c (gnome_about_display_comments): Use
	strtok_r instead of strtok.
	* libgnomeui/gnome-dateedit.c (gnome_date_edit_get_date): Likewise.
	* libgnomeui/gnome-spell.c (gnome_spell_fill_info): Likewise.

1999-02-17  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-dock.c (drag_floating): No longer re-grab pointer.

	* gnome-dock-item.c (gnome_dock_item_button_changed): Do not add a
 	GTK+ grab.
	(gnome_dock_item_button_changed): Do not remove the GTK+ grab.
	(gnome_dock_item_remove): Likewise.
	(gnome_dock_item_grab_pointer): Grab on `item->window', not
 	`item->bin_window'.
	(gnome_dock_item_map_event): Removed.

	* gnome-dock-item.c (gnome_dock_item_size_request): Avoid calling
 	gtk_widget_size_request with `requisition' == `widget->requisition'.
	(size_request_v): Likewise.
	(size_request_h): Likewise.
	(gnome_dock_size_request): Likewise.

1999-02-15  Elliot Lee  <sopwith@redhat.com>

	* gnome-init.c: Don't give sound events for widgets
	that are not visible. Don't give sound events for
	objects with the "gnome_disable_sound_events" property
	set.

Sun Feb 14 22:12:48 1999  George Lebl  <jirka@5z.com>

	* gnome-icon-entry.c: don't let the file entry expand verticaly when the
	  window gets resized

1999-02-14  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-dentry-edit.c (fill_easy_page): The terminal toggle should
	be anchored to the left.  It is very disconcerting to have it move
	around when the user resizes the window.

1999-02-14 Sergey Panov <sipan@mit.edu>

	* gnome-dentry-edit.c(label_new)The proper label alignment is not
	to the left, but to the right, where entries are.

1999-02-14 Sergey Panov <sipan@mit.edu>

	* gnome-dentry-edit.c(fill_easy_page,make_page) Get terminal
	toggle widget to align correctly -- it was not centered, but
	glued to the icon widget. Achived what, I think, Federico 
	tried to do but by other means.
	